@@ -1,46 +1,0 @@
-
-# expressionparsetab.py
-# This file is automatically generated. Do not edit.
-
-_lr_method = 'SLR'
-
-_lr_signature = '6\xc3\xfa\x0fIG\xaa\xeb\x04\xebMC\xba|\x15\t'
-
-_lr_action_items = {'RPAREN':([4,9,34,33,11,18,24,12,21,29,23,31,25,22,1,27,26,20,3,2,28,],[-10,-9,-14,-17,-20,-7,-8,24,31,-3,-16,-18,-5,-15,-11,-4,-6,-19,-12,-13,-2,]),'NAME':([16,11,15,10,14,30,0,13,17,8,6,32,],[2,2,2,20,2,33,2,2,2,2,2,2,]),'POWER':([25,31,1,7,2,33,26,9,34,20,3,28,18,4,27,24,22,29,12,],[14,-18,-11,14,-13,-17,-6,-9,14,-19,-12,14,-7,-10,14,-8,14,14,14,]),'NUMBER':([15,14,8,11,6,13,32,0,17,16,],[3,3,3,3,3,3,3,3,3,3,]),'TIMES':([27,29,12,18,1,26,25,4,22,28,2,20,7,9,31,24,3,34,33,],[-4,15,15,-7,-11,-6,-5,-10,15,15,-13,-19,15,-9,-18,-8,-12,15,-17,]),'PLUS':([3,34,24,9,18,22,12,29,1,26,25,31,4,7,27,20,2,28,33,],[-12,16,-8,-9,-7,16,16,-3,-11,-6,-5,-18,-10,16,-4,-19,-13,-2,-17,]),'LPAREN':([15,17,13,11,16,6,32,8,2,0,20,14,],[6,6,6,6,6,6,6,6,11,6,11,6,]),'COLON':([18,26,20,28,31,22,21,33,24,3,4,1,27,11,2,29,34,23,25,9,],[-7,-6,-19,-2,-18,-15,32,-17,-8,-12,-10,-11,-4,-20,-13,-3,-14,-16,-5,-9,]),'COMMA':([2,31,19,],[10,-18,30,]),'MINUS':([15,33,9,17,6,16,13,34,22,12,32,29,2,28,8,25,31,14,4,24,11,20,1,7,27,0,18,3,26,],[8,-17,-9,8,8,8,8,17,17,17,8,-3,-13,-2,8,-5,-18,8,-10,-8,8,-19,-11,17,-4,8,-7,-12,-6,]),'$':([24,26,29,20,2,28,5,31,33,4,7,25,18,1,27,3,9,],[-8,-6,-3,-19,-13,-2,0,-18,-17,-10,-1,-5,-7,-11,-4,-12,-9,]),'DIVIDE':([7,20,22,2,31,24,3,26,9,33,12,29,18,1,4,25,27,28,34,],[13,-19,13,-13,-18,-8,-12,-6,-9,-17,13,13,-7,-11,-10,-5,-4,13,13,]),}
-
-_lr_action = { }
-for _k, _v in _lr_action_items.items():
-   for _x,_y in zip(_v[0],_v[1]):
-       _lr_action[(_x,_k)] = _y
-del _lr_action_items
-
-_lr_goto_items = {'Function':([32,15,13,0,8,6,16,17,10,11,14,],[1,1,1,1,1,1,1,1,19,1,1,]),'System_Function':([15,8,14,11,17,0,6,16,13,32,],[9,9,9,9,9,9,9,9,9,9,]),'VariableReference':([8,32,0,16,6,13,14,17,11,15,],[4,4,4,4,4,4,4,4,4,4,]),'arguments':([11,],[21,]),'statement':([0,],[5,]),'expression':([15,32,16,13,17,14,6,11,8,0,],[27,34,28,25,29,26,12,22,18,7,]),'empty':([11,],[23,]),}
-
-_lr_goto = { }
-for _k, _v in _lr_goto_items.items():
-   for _x,_y in zip(_v[0],_v[1]):
-       _lr_goto[(_x,_k)] = _y
-del _lr_goto_items
-_lr_productions = [
-  ("S'",1,None,None,None),
-  ('statement',1,'p_statement_expr','expressionparser.py',106),
-  ('expression',3,'p_expression_binop','expressionparser.py',110),
-  ('expression',3,'p_expression_binop','expressionparser.py',111),
-  ('expression',3,'p_expression_binop','expressionparser.py',112),
-  ('expression',3,'p_expression_binop','expressionparser.py',113),
-  ('expression',3,'p_expression_binop','expressionparser.py',114),
-  ('expression',2,'p_expression_uminus','expressionparser.py',119),
-  ('expression',3,'p_expression_group','expressionparser.py',124),
-  ('expression',1,'p_expression_factor','expressionparser.py',129),
-  ('expression',1,'p_expression_factor','expressionparser.py',130),
-  ('expression',1,'p_expression_factor','expressionparser.py',131),
-  ('expression',1,'p_expression_factor','expressionparser.py',132),
-  ('expression',1,'p_expression_factor','expressionparser.py',133),
-  ('arguments',3,'p_expression_arguments','expressionparser.py',138),
-  ('arguments',1,'p_expression_arguments','expressionparser.py',139),
-  ('arguments',1,'p_expression_arguments','expressionparser.py',140),
-  ('System_Function',5,'p_expression_system_function','expressionparser.py',148),
-  ('Function',4,'p_expression_function','expressionparser.py',217),
-  ('VariableReference',3,'p_expression_variablereference','expressionparser.py',228),
-  ('empty',0,'p_empty','expressionparser.py',301),
-]
